roxctl/netpol/connectivity/diff/testdata/acs-security-demos-new-version/frontend/asset-cache/deployment.yaml
apiVersion: v1
kind: ServiceAccount
automountServiceAccountToken: false
metadata:
  name: asset-cache
  namespace: frontend
  labels:
    app: asset-cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asset-cache
  namespace: frontend
  labels:
    app: asset-cache
    exposed: "true"
    app.kubernetes.io/part-of: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asset-cache
  template:
    metadata:
      labels:
        app: asset-cache
    spec:
      serviceAccountName: asset-cache
      automountServiceAccountToken: false
      containers:
        - image: quay.io/vuln/asset-cache:v1
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          imagePullPolicy: Always
          name: asset-cache
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: asset-cache
    exposed: "true"
  name: asset-cache-service
  namespace: frontend
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: asset-cache
  type: ClusterIP
