roxctl/netpol/connectivity/diff/testdata/acs-security-demos-new-version/frontend/asset-cache/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: asset-cache
  namespace: frontend
  labels:
    app: asset-cache
spec:
  to:
    kind: Service
    name: asset-cache-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
